# Documentary-Production

./: .gitignore  CLAUDE.md  docu_studio.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docu_studio/: __main__.py  licensing.py  platform_layer.py  retry.py
docu_studio/clipstory/: clipstory_assembly.py  clipstory_config.py  clipstory_ffmpeg.py  clipstory_music.py  clipstory_pacing.py  clipstory_runner.py  clipstory_script_gen.py
docu_studio/common/: audio_ducking.py  captions.py  ffmpeg_finalize.py  music_jamendo.py  resilient_download.py  tts_calibration.py
docu_studio/config/: defaults.py  key_cache.py  settings.py
docu_studio/gui/: app.py  bridge.py  pitch_dark.json  theme.py  tokens.py  webview_app.py
docu_studio/history/: run_history.py
docu_studio/media/: fcpxml_generator.py  ffmpeg_wrapper.py
docu_studio/output/: project_folder.py
docu_studio/pipeline/: events.py  runner.py
docu_studio/shorts/: __init__.py  capability_resolvers.py  music_library.py  music_providers.py  shorts_alignment.py  shorts_assembly.py  shorts_audio_mix.py  shorts_beat_detection.py  shorts_captions.py  shorts_config.py  shorts_cuts.py  shorts_ffmpeg.py  shorts_footage_download.py  shorts_log.py  shorts_runner.py  shorts_script_gen.py  shorts_sentence_cuts.py  shorts_sentence_spans.py  shorts_tts_calibration.py  shorts_tts_join.py  (+1 more)
tests/: conftest.py
(+162 files in other folders)
